Multires modifier memory leak #60840

Closed
opened 2019-01-25 00:44:37 +01:00 by Tal Hershkovich · 7 comments

System Information
Operating system: Windows 10
Graphics card: GeForce GTX 1070/PCIe/SSE2

Blender Version
Broken: 2.80, 2019-01-19, hash: b0dee09a6d
Worked: (optional)

Short description of error
Every time I pose the character the memory goes up more and more until the ram is completly full, when starting a new scene it also keeps going up and being released only after closing blender. the solution was to delete all the multires modfiers

Exact steps for others to reproduce the error
open the file Arnold_2.8.blend and start the task manager. move the character from the torso or any other controller more times then on the undo list. The Ram will go up always.
Delete all the multires modifiers via the outliner and the problem is solved

**System Information** Operating system: Windows 10 Graphics card: GeForce GTX 1070/PCIe/SSE2 **Blender Version** Broken: 2.80, 2019-01-19, hash: b0dee09a6d55 Worked: (optional) **Short description of error** Every time I pose the character the memory goes up more and more until the ram is completly full, when starting a new scene it also keeps going up and being released only after closing blender. the solution was to delete all the multires modfiers **Exact steps for others to reproduce the error** open the file [Arnold_2.8.blend](https://archive.blender.org/developer/F6394163/Arnold_2.8.blend) and start the task manager. move the character from the torso or any other controller more times then on the undo list. The Ram will go up always. Delete all the multires modifiers via the outliner and the problem is solved

Added subscriber: @TalHershkovich

Added subscriber: @TalHershkovich
Sergey Sharybin was assigned by Jacques Lucke 2019-01-25 17:57:55 +01:00

Added subscribers: @mont29, @ideasman42

Added subscribers: @mont29, @ideasman42

Doesn't seem to be multires related. Even with P899: (An Untitled Masterwork)

diff --git a/source/blender/modifiers/intern/MOD_multires.c b/source/blender/modifiers/intern/MOD_multires.c
index a18fd6a4c5e..fae8d264615 100644
--- a/source/blender/modifiers/intern/MOD_multires.c
+++ b/source/blender/modifiers/intern/MOD_multires.c
@@ -152,6 +152,7 @@ static Mesh *applyModifier(ModifierData *md,
                            const ModifierEvalContext *ctx,
                            Mesh *mesh)
 {
+	return mesh;
 	Mesh *result = mesh;
 	MultiresModifierData *mmd = (MultiresModifierData *)md;
 	SubdivSettings subdiv_settings;
diff --git a/source/blender/modifiers/intern/MOD_subsurf.c b/source/blender/modifiers/intern/MOD_subsurf.c
index 3cabd1131cb..fafd04d761f 100644
--- a/source/blender/modifiers/intern/MOD_subsurf.c
+++ b/source/blender/modifiers/intern/MOD_subsurf.c
@@ -199,6 +199,7 @@ static Mesh *applyModifier(ModifierData *md,
                            const ModifierEvalContext *ctx,
                            Mesh *mesh)
 {
+	return mesh;
 	Mesh *result = mesh;
 	SubsurfModifierData *smd = (SubsurfModifierData *) md;
 	SubdivSettings subdiv_settings;

applied the memory is still leaking. (Also, simplification is enabled at level 0, so don't think any of subsurf/multires is active).

So maybe @mont29 or @ideasman42 will be faster than me in fixing this.

Doesn't seem to be multires related. Even with [P899: (An Untitled Masterwork)](https://archive.blender.org/developer/P899.txt) ``` diff --git a/source/blender/modifiers/intern/MOD_multires.c b/source/blender/modifiers/intern/MOD_multires.c index a18fd6a4c5e..fae8d264615 100644 --- a/source/blender/modifiers/intern/MOD_multires.c +++ b/source/blender/modifiers/intern/MOD_multires.c @@ -152,6 +152,7 @@ static Mesh *applyModifier(ModifierData *md, const ModifierEvalContext *ctx, Mesh *mesh) { + return mesh; Mesh *result = mesh; MultiresModifierData *mmd = (MultiresModifierData *)md; SubdivSettings subdiv_settings; diff --git a/source/blender/modifiers/intern/MOD_subsurf.c b/source/blender/modifiers/intern/MOD_subsurf.c index 3cabd1131cb..fafd04d761f 100644 --- a/source/blender/modifiers/intern/MOD_subsurf.c +++ b/source/blender/modifiers/intern/MOD_subsurf.c @@ -199,6 +199,7 @@ static Mesh *applyModifier(ModifierData *md, const ModifierEvalContext *ctx, Mesh *mesh) { + return mesh; Mesh *result = mesh; SubsurfModifierData *smd = (SubsurfModifierData *) md; SubdivSettings subdiv_settings; ``` applied the memory is still leaking. (Also, simplification is enabled at level 0, so don't think any of subsurf/multires is active). So maybe @mont29 or @ideasman42 will be faster than me in fixing this.

Indeed some modifiers are very bad here (not taking care of non-ID pointers when copying themselves, have patch for that will commit tomorrow). Looks like there is more memleak though… :/

Indeed some modifiers are very bad here (not taking care of non-ID pointers when copying themselves, have patch for that will commit tomorrow). Looks like there is more memleak though… :/
Sergey Sharybin was unassigned by Bastien Montagne 2019-01-26 01:14:34 +01:00
Bastien Montagne self-assigned this 2019-01-26 01:14:34 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by 147e22ef70

This issue was referenced by 147e22ef700124dcbaa5576b72a2a77e73adf350

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60840
No description provided.